fix links and buttons on safari

--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,10 @@ a.hoverable-link {
   cursor: pointer;
   text-decoration: none;
   color: inherit;
+}
 
-  &:hover {
+@media (hover) {
+  a.hoverable-link:hover {
     opacity: 0.7;
     translate: 0 -2px;
   }
@@ -47,6 +49,7 @@ button.action-button {
   font-size: 1rem;
   font-weight: bold;
   transition: 0.1s ease-in-out;
+  color: black;
 
   .front {
     display: flex;
